cruiser: remove debugging output, use more efficient list operations